[package]
name = "slice_map"
version = "0.2.6"
edition = "2021"
description = "A generic container to store a single type of data into unevenly sized slices."
repository = "https://github.com/DoctorWhoof/slice_map.git"
documentation = "https://docs.rs/slice_map/latest/slice_map/"
license = "MIT"
# categories = ["no-std"]

[dependencies]
# slotmap = { version = "1.0.7", default-features = false }
slotmap = { version = "1.0.7" }

[package.metadata.docs.rs]
all-features = true
